<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/img"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <ProgressBar
        android:id="@+id/prgressBarRecu"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:indeterminate="true"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:fontFamily="serif-monospace"
        android:text="@string/Rcuperacion"
        android:textColor="@color/white"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/txtUser_Recu"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@drawable/style_bordes_editext"
        android:drawableLeft="@drawable/baseline_person_outline_24"
        android:textColorHint="@color/white"
        android:hint="@string/User"
        android:inputType="textPersonName"
        android:fontFamily="serif-monospace"
        android:textSize="20dp"

        />

    <Button
        android:id="@+id/btnAceptar"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:text="@string/btn"
        android:onClick="send"
        app:cornerRadius="20dp"/>


</LinearLayout>

